@@ -28,6 +28,7 @@ DIST openssl-0.9.8za.tar.gz 3787508 SHA256 cdcb98d0fbc026ca798b17919334310271d3a
 DIST openssl-1.0.0m.tar.gz 4054477 SHA256 224dbbfaee3ad7337665e24eab516c67446d5081379a40b2f623cf7801e672de SHA512 0a8024bcffe0bfa488aa6a8592a393017481573aac563223c171ed62e040d2fba2396a65123ba3d7287ebecd33c3c9183b1c09783121fe480c8eef8f8f938b9d WHIRLPOOL 6bab33e9b0fb25505cf94035aef5997c7c4eef29192f00abeb0ed7137114e00082bd7ffff6eb3091b19439a75fdb4a7bbb00df0192d21a21e9ff3359ce024d06
 DIST openssl-1.0.1g.tar.gz 4509047 SHA256 53cb818c3b90e507a8348f4f5eaedb05d8bfe5358aabb508b7263cc670c3e028 SHA512 66ebbad3c8ad98a07b486d39d0c3ae62b00133f8f2877cf8b97c461e7c7f40b29cf9c3cae82cf73a92dcf1daa63d33aa76c910fbcbe60158589fc7cb48f41e6d WHIRLPOOL 6bfb30d1f41b051f794e2eb80ad9116b064f6d464c22698538c4e16b85739b80744387ca160fd1a86b92814b5b1b3fc7d0658a709942b7b31b198da8cce37056
 DIST openssl-1.0.1h.tar.gz 4475692 SHA256 9d1c8a9836aa63e2c6adb684186cbd4371c9e9dcc01d6e3bb447abf2d4d3d093 SHA512 687d12ae13e364b15622f68933894050d577a4f8647bd68c7e9e86eb9d9f49cd2ebb0da3c5d3ded0a8746cf7b87e23b167b536116aa9a0402d7e7cc2ee401a92 WHIRLPOOL d453aaf24c6e2c8d9c5c76f76acfdaf8b511719fe25a4748c1681ff1d9e8a64b88249270e94900336cd110e1d7ee53a5e6d778a701967b7addb3f80c8335e5b2
+DIST openssl-1.0.1i.tar.gz 4422117 SHA256 3c179f46ca77069a6a0bac70212a9b3b838b2f66129cb52d568837fc79d8fcc7 SHA512 6cbcdcec8568236e8f20f0461f93df8a193a0ad88102ff548443e6ec87e2a7f649e314beee1e6bafda693934b4fb142244b61d14bf736828dda09e277b941d93 WHIRLPOOL 4baefe8a203243d08c2ca4dc9e1019a539135604a8ddfb09b9a7f2711108ad6ebd45eef1cfa09331f19fe57defbe7e1390f9ac2de086437a484c5819cabb5a4a
 DIST openssl-1.0.2-beta2.tar.gz 4872101 SHA256 50c8c1268621c4f9b2de97036685221c7e56563b9b72d449d646122ad8139ec3 SHA512 a3e8e5e9145eb36a6fdc23561009f24179db31b786724ca3d1d6f798d54cd7eed478814094a5416939ed9c4f4a9e1f14f2d253b7090dc7f883dad4b7e0a504ef WHIRLPOOL 32a1974fc1129d11600b9ac6e3cf401a09e3171ff9a963b41bbc0ef0e106055c4965c6f7936c87af0ec7dd63d1ac600dfa47108389f248102e90210561448907
 DIST openssl-c_rehash.sh.1.7 4167 SHA256 4999ee79892f52bd6a4a7baba9fac62262454d573bbffd72685d3aae9e48cee0 SHA512 55e8c2e827750a4f375cb83c86bfe2d166c01ffa5d7e9b16657b72b38b747c8985dd2c98f854c911dfbbee2ff3e92aff39fdf089d979b2e3534b7685ee8b80da WHIRLPOOL c88f06a3b8651f76b6289552cccceb64e13f6697c5f0ce3ff114c781ce1c218912b8ee308af9d087cd76a9600fdacda1953175bff07d7d3eb21b0c0b7f4f1ce1
 EBUILD openssl-0.9.8y-r1.ebuild 4423 SHA256 fc138d6b0f9b6ffb4e7e16842a0f0b01476774ee82a97a5c9d9cb93c4570756f SHA512 9b7ebb187a7a95c1e95c5c88fd7d922216fa2bc0d4fcfa3da2e5a9bc421f7f0026dd730a8a807f63b84cc77e594c562dfa2f10de9572f1182a9745b02292b082 WHIRLPOOL 792091c221bfdc1d3ae08ef26ab0cabdeae5386c73a0a6758c13deb12e1b6697668040abf6f6f62e988311209ded7b8e3d3aa4ed4e1491b444705b76c3ce39a3
@@ -40,13 +41,24 @@ EBUILD openssl-1.0.1g.ebuild 8184 SHA256 6cce99dde24901076936b3851efab51c2364797
 EBUILD openssl-1.0.1h-r1.ebuild 8126 SHA256 b9430778c89405661f336d28f1d0198852132267dc3c62b642f25e233d1f5366 SHA512 9f93abe94220051b540aaabd629d2da3672236e16b9bdaaaa031ec4da3b4546304d78d1cb7dfba622ed497e3c620105a3e52d18c26e00c0a62c252cda8700999 WHIRLPOOL fc00ca6882d0df73328ded57fe8d452c561cb2c4729905cbf7e1f5045d8236d2b5a6dcc100f73531b4a6ee4fd953dfa81734725ec6d5a1824ff0d4a80c1ea89f
 EBUILD openssl-1.0.1h-r2.ebuild 8314 SHA256 3d7564cf67788cce2efc77787aa610a6dc1068287af6ed1ed044d95dab7f3e98 SHA512 5e5cc795395134fb49e0339772288feda00ecac49002cfdfc4839f12da4a621922f11b7bbfaa5b97e1c54b67223f47444aecbc5ee164596f50ff6f3541478ab4 WHIRLPOOL c8daf292eda2b48aa61277e21633171c1205eca512754120d476d41dfe9a6a291bf3837c9edf03b89035fda2dc65331b7f108c0112649b6b904e4c21bf0bd16a
 EBUILD openssl-1.0.1h-r3.ebuild 8532 SHA256 69bc9f52d2b808af643f07bbcaf3b07e5bda512191d5e274644d4a16b05181d9 SHA512 00f6af15abe99b9ecb90ed5971e312f7a1dc7751d001a80afaec2bbc1ea6379d803adced727fdbd4298d6aa1a72ae0e752d48946816927a4ccbadc71a41ed447 WHIRLPOOL 7094c824ae44ff7e49f5d76e6e98af728af5e58a88c64cdf333bbd91d2de07599ebab1c6c02e4b5f57581fa11715353c5769ca84a9d3d0308f8ad0df3ef634a4
+EBUILD openssl-1.0.1i.ebuild 8529 SHA256 72b410cbebd86882b47c3af4dd13b20a26415bb985c3f1f20312919acee71740 SHA512 eafa781e306bdbe208edd4a6788060065a5527342f67d2d0bb3d62e83884646e2c732e1d3fb551af4c1ed0cf780d3f77bd0369cc447d056f0dcaac1527373183 WHIRLPOOL 1817dcb4069e5f0e6e3d0725477ca058747ff5c33e4d1b6fca9642a208c15636f790ff4b586c7f7c6799f2ae5d728774ed296590df66314da53331dd7a066924
 EBUILD openssl-1.0.2_beta2.ebuild 8286 SHA256 130ed1856f4d56b28b4d651863e2cbefda59afa13487f4dcf0700b82c050a3ee SHA512 7a23c18cf59370d456e0d0528995aa3372fdf20204172ba5aeea60857812575413d66cb9ab0b572dc07f92db759013ec11da8e402cc8668cd7d5e2789ad2e7ad WHIRLPOOL 14880c0164b7c2efa3ac15a1c0e7b8d2da3ef90454f2a9016fc3e38cd4e6179206e0bc1a5bc4bdbc0b0560fb6673dffabbbd5b061088f8acbbdf70e0b2c79b0c
-MISC ChangeLog 87918 SHA256 b4eb8f4aed9f8e92063d65df814b8a75d269dd7bd293dc07b241bf1b9580fed9 SHA512 2055341f55a2d60396fdfc431c9dd5bfea1538820ffef525a320b2dd3dfa34860659735d90865628a8070abd788d6544367dbd492d187c16279e0ff6f8048ef7 WHIRLPOOL d484abec73ecbb610e4e2deba38fbfa1af8fc24f7f6ab619c8d3ffb359902a87482d51117c070d7e5a3c2c7927d4bc1d02c5491a68700f3c9987c614eae2d19a
+MISC ChangeLog 88040 SHA256 a98af12163024d4f72666194a71f2ddf1c0fd5a9d4eaf92ba5d2c914fd739dfb SHA512 ebbe10d30e917d29f4d6f3e94c5272228e46076b16cf3090905c5b897b9bab63be7a7731ce174e12d59a8a8896a38a0deb81254071c1b82f8590b2fbd370a5db WHIRLPOOL cc7fd128ebc7bd8750e373ce4f20ce273e1f90f5397ddcd55f6ef7c58d4d404f265ec7d854161cc7ef23b6e77422936cc484a6d0cc1b37708d4e1e7dcc45086b
 MISC metadata.xml 562 SHA256 5c61e2a07ffdb4ba157e0add7f84ff74458c890092d5e6980fd936dfdb457c34 SHA512 f83769af7ffd223923b72a62db27cbc80ca31925b95b720845b6bedd2a9b52837f70f9da93ee43e272ceb3c8424a8c9f35a31ebd5274bc04c91cd63ace1af844 WHIRLPOOL d98f2af2cf3e13c09ad526a2fe06fe8ef02e1db20fd4e3843f1793a97c9ae6a2897308c84038a9a37d6d68fadc7af6d913b980f4f079dac36ea3860a33aca8c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPhOWgACgkQkKaRLQcq0GJWXQCfZZ4XOuRGjWOubYRq3c+CXhJU
-qeUAoK28jP8ofiZZ3yNkuXgQAFtB7qZO
-=gqCg
+iQIcBAEBCAAGBQJT4sWiAAoJEPGu1DbS6WIAylgQAJQg85cqafBB4dhIohZffaUV
+ewJ2sXe+TFGYC7mlKoivVPRDr5JeWBUqohvd9XFb8dXxsV8ngWOwXICQJk4rjuZB
+nRJr1/gQItTH+l0eyPWIje6v1vyWpB0HvWAjGlWfDjhAVw9Dh4YCE2Bqd7JhflaK
+cyFE7oMOyPevmUmagvUpuLvXG8cS6e0Y02pAeDr2baMk+p1rCkVdwWkrhFLbjtEm
+Hmy0uhnQFI3SwaGSdNX5IaiMAcR6dAUPOTe6jdRmLninkLodK+eZ6anL9i0VTDZd
+MU5niUtdfQ7SFYqdAn7pW9Bv1xyo258XYgSmhYw6aKO29vHZ7P+MA8EFRe0CZRWu
+CMNfPqrA70NahPJjeHmizF5oS/Q3APW2fqEWMxG6SZBTEJcqFTgoFY1eHdQBBmk7
+G7LBd2SnD42HTziYW587Dfvb72GOk9/IbdyCfxiQ2sASyH8DTXYGlYcrzSvbeIAb
+nTRtL9nuUntLKUIJ/aFWRzHgYKOFK39/zOSIxZCECH2is6LMlWLRMxDKQc3H+yXR
+ef9MqURwQhsDIa+F+iSJcyXLl7l+UmJuxQZ0Ck2R7H0gBM+VQrgDz41SlWCnP2Dc
+wiskE7fVQCTeO8MEoxiwN6Msj4cNKJtLDu5LtpzS7SIBRtLGZ3cRUP90d39AejX1
+DGEKUbtdvK7+OpnpzpcS
+=EG71
 -----END PGP SIGNATURE-----
